# cpp-experiments

./: .gitignore
string-constants/global_const_string/: CMakeLists.txt  common.h  file2.cpp
string-constants/global_extern_const_chars/: common.cpp  common.h  file2.cpp  file2.h  main.cpp
string-constants/global_extern_const_string/: common.cpp  common.h
string-constants/global_extern_const_string_view/: CMakeLists.txt  common.cpp  common.h  file1.cpp  file1.h  file2.cpp  main.cpp
string-constants/global_inline_const_string/: common.h  file1.cpp  main.cpp
string-constants/global_inline_constexpr_chars/: common.h  file1.cpp
string-constants/global_inline_constexpr_string_view/: common.h
